--- a/bugs/Dima.Web/Pages/Identity/Register.razor
+++ b/bugs/Dima.Web/Pages/Identity/Register.razor
@@ -17,7 +17,7 @@
             <EditForm Model="@InputModel" OnValidSubmit="OnValidSubmitAsync">
                 <DataAnnotationsValidator/>
 
-                <MudTextField id="e-mail"
+                <MudTextField id="email"
                     T="string"
                     Label="E-mail"
                     HelperText="Campo obrigatório"
