--- a/bugs/Dima.Web/Pages/Transactions/List.razor
+++ b/bugs/Dima.Web/Pages/Transactions/List.razor
@@ -85,7 +85,7 @@
         <TemplateColumn Class="d-flex justify-end">
             <CellTemplate>
                 <MudStack Row>
-                    <MudIconButton Icon="@Icons.Material.Filled.Edit"
+                    <MudIconButton Class="edit" Icon="@Icons.Material.Filled.Edit"
                                    Color="Color.Primary"
                                    Href="@($"/lancamentos/editar/{context.Item.Id}")">
                     </MudIconButton>
